--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ ul.sidenav {
   flex-direction: column;
   justify-content: center;
   background: rgb(24, 23, 23);
+  z-index: 3;
 }
 
 ul.sidenav li a {
@@ -46,6 +47,31 @@ div.content {
 
 .material-icons {
   background:rgb(24, 23, 23);
+}
+
+#page {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.container {
+  width: 100%;
+  height: 90%;
+  min-height: 566px;
+  position: absolute;
+  top: 5%;
+  margin: 0 auto;
+}
+
+.home-page .text-zone {
+  position: absolute;
+  left: 10%;
+  top: 50%;
+  width: 40%;
+  max-height: 90%;
+  color: white;
+  font-size:xx-large;
 }
 
 
