--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+/*------------------------------------------------------*/
+/* BASIC SETUP */
+/*------------------------------------------------------*/
+
 * {
     margin: 0;
     padding: 0;
@@ -7,8 +11,86 @@
 html {
     background-color: #fff;
     color: #555;
-    font-family: 'Roboto Mono', 'Arial' sans-serif;
+    font-family: 'Roboto Mono', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+}
+
+/*------------------------------------------------------*/
+/* REUSABLE COMPONENTS */
+/*------------------------------------------------------*/
+
+.row {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* ----- HEADINGS -----*/
+h1 {
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 240%;
+    font-weight: 300;
+}
+
+/* ----- BUTTONS -----*/
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration:none;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.02s, color 0.2s;
+}
+
+.btn-full:link,
+.btn-full:visited {
+    background-color: #2ecc71;
+    border: 1px solid #2ecc71;
+    color: #fff;
+    margin-right: 15px;
+}
+
+.btn-ghost:link,
+.btn-ghost:visited {
+    border: 1px solid #2ecc71;
+    color: #2ecc71;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #25a25a;
+}
+
+.btn-full:hover,
+.btn-full:active {
+    border: 1px solid #25a25a;
+}
+
+.btn-ghost:hover,
+.btn-ghost:active {
+    border: 1px solid #25a25a;
+    color: #fff;
+}
+
+/*------------------------------------------------------*/
+/* HEADER */
+/*------------------------------------------------------*/
+
+header {
+    background-image: url(img/4002676.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.hero-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
